--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
     "firebase": "^7.24.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -14,6 +15,7 @@
     "react-scripts": "4.0.0",
     "react-stepper-horizontal": "^1.0.11",
     "react-toastify": "^6.0.9",
+    "react-tooltip": "^4.2.10",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
